[package]
name = "rollback"
version = "0.1.0"
authors = ["Angel of Sol"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
nalgebra = { version = "0.19.0", features = ["serde-serialize", "mint"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
bincode = "1.2.1"
rand = "0.7.3"
